# server/src/routes/auth/login/validateSchema.js
@@ -3,6 +3,7 @@ const { celebrate, Joi, Segments } = require('celebrate')
 module.exports = celebrate({
   [Segments.BODY]: Joi.object().keys({
     username: Joi.string().required(),
-    password: Joi.string().required()
+    password: Joi.string().required(),
+    fingerprint: Joi.string().required()
   })
 })
